Archive2/9a/1002b40490e5ff/output
main.cpp: In function ‘int main()’:
main.cpp:6:19: error: invalid conversion from ‘int’ to ‘int*’ [-fpermissive]
     int * r = int{};
                   ^
